--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Resume<a href="https://drive.google.com/file/d/14S8TMIgfwqD1ZKqyGHsDfO3hDPGwnPZY/view?usp=drivesdk"
+          <h2>Resume<a href="https://drive.google.com/file/d/13CtWHwQ8GhMpzTcMX6ya3w_tdjP2_8f1/view?usp=sharing"
               target="_blank" rel="noopener noreferrer"><span class="iconify" data-icon="ei:external-link"></span></a>
           </h2>
           <!-- <p>I have qualified for Google code jam in the year 2021, and also contributed to the CSWALA, an Open-source project under the Girlscript summer of code this year. </p> -->
@@ -694,16 +694,15 @@
 
                   <div class="swiper-slide">
                     <div class="testimonial-item">
-                      <img src="assets/img/testimonials/testimonial-1.png" class="testimonial-img" alt="">
-                      <h3>Sarvesh Rahate</h3>
-                      <h4>Corporate Relation Officer at Sagar Group of Institutions</h4>
+                      <img src="assets/img/testimonials/testimonial.jpeg" class="testimonial-img" alt="">
+                      <h3>Surya Prakash</h3>
+                      <h4>QA Automation Engineer</h4>
                       <p>
                         <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Ghanshyam has got much of qualities within. He's honest towards the tasks. He has got skills to
-                        work
-                        in the team and presenting ideas. Apart from these, technical domain is quite strong from
-                        ghanshyam,
-                        which makes his results excellent..
+                        Tanu has worked with me. She has a very good skill in Automation testing. she is pro active and
+                        wants to learn new tech on Automation and even wanted to try them on project. 
+                        she did quite a
+                        lot of certifications on the automation part..
                         <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                       </p>
                     </div>
@@ -781,7 +780,7 @@
               <div class="section-title">
                 <h2>Contact</h2>
               </div>
-                <div class="row mt-1"> 
+              <div class="row mt-1">
                 <!-- <div class="col-lg-4">  
                   <div class="info">
                     <div class="address">
@@ -818,7 +817,7 @@
                     </div>
                   </div>
                 </div>
-        
+
 
                 <!-- </div>
           </div> -->
