--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               Certifications</span></a></li>
         <li><a href="#awards" class="nav-link scrollto"><i class="bx bx-award"></i> <span>Awards &
               Achievements</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#contacts" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -570,8 +570,6 @@
       </div>
     </section>
 
-
-
     <!-- ======= Services Section ======= -->
     <section id="awards" class="services">
       <div class="container" data-aos="fade-up">
@@ -676,40 +674,40 @@
 
         </div>
 
-      </div>
-    </section>-->
+      </div> -->
+    </section>
 
-          <!--  End Services Section  -->
+    <!--  End Services Section  -->
 
-          <!-- ======= Testimonials Section ======= -->
-          <section id="testimonials" class="testimonials section-bg">
-            <div class="container" data-aos="fade-up">
+    <!-- ======= Testimonials Section ======= -->
+    <section id="testimonials" class="testimonials section-bg">
+      <div class="container" data-aos="fade-up">
 
-              <div class="section-title">
-                <h2>Testimonials</h2>
+        <div class="section-title">
+          <h2>Testimonials</h2>
+        </div>
+
+        <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonial.jpeg" class="testimonial-img" alt="">
+                <h3>Surya Prakash</h3>
+                <h4>QA Automation Engineer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Tanu has worked with me. She has a very good skill in Automation testing. she is pro active and
+                  wants to learn new tech on Automation and even wanted to try them on project.
+                  she did quite a
+                  lot of certifications on the automation part..
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
               </div>
+            </div>
+            <!-- End testimonial item -->
 
-              <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
-                <div class="swiper-wrapper">
-
-                  <div class="swiper-slide">
-                    <div class="testimonial-item">
-                      <img src="assets/img/testimonials/testimonial.jpeg" class="testimonial-img" alt="">
-                      <h3>Surya Prakash</h3>
-                      <h4>QA Automation Engineer</h4>
-                      <p>
-                        <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                        Tanu has worked with me. She has a very good skill in Automation testing. she is pro active and
-                        wants to learn new tech on Automation and even wanted to try them on project. 
-                        she did quite a
-                        lot of certifications on the automation part..
-                        <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                      </p>
-                    </div>
-                  </div>
-                  <!-- End testimonial item -->
-
-                  <!-- <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
                 <h3>Sara Wilsson</h3>
@@ -721,9 +719,9 @@
                 </p>
               </div>
             </div> -->
-                  <!-- End testimonial item -->
+            <!-- End testimonial item -->
 
-                  <!-- <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
                 <h3>Jena Karlis</h3>
@@ -735,9 +733,9 @@
                 </p>
               </div>
             </div> -->
-                  <!-- End testimonial item -->
+            <!-- End testimonial item -->
 
-                  <!-- <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
                 <h3>Matt Brandon</h3>
@@ -749,9 +747,9 @@
                 </p>
               </div>
             </div> -->
-                  <!-- End testimonial item -->
+            <!-- End testimonial item -->
 
-                  <!-- <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
                 <h3>John Larson</h3>
@@ -763,25 +761,25 @@
                 </p>
               </div>
             </div> -->
-                  <!-- End testimonial item -->
+            <!-- End testimonial item -->
 
-                </div>
-                <div class="swiper-pagination"></div>
-              </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
 
-            </div>
-          </section>
-          <!-- End Testimonials Section -->
+      </div>
+    </section>
+    <!-- End Testimonials Section -->
 
 
-          <!-- ======= Contact Section ======= -->
-          <section id="contact" class="contact">
-            <div class="container" data-aos="fade-up">
-              <div class="section-title">
-                <h2>Contact</h2>
-              </div>
-              <div class="row mt-1">
-                <!-- <div class="col-lg-4">  
+    <!-- ======= Contact Section ======= -->
+    <section id="contacts" class="contact">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h2>Contact</h2>
+        </div>
+        <div class="row mt-1">
+          <!-- <div class="col-lg-4">  
                   <div class="info">
                     <div class="address">
                       <i class="bx bxl-linkedin"></i>
@@ -790,39 +788,39 @@
                     </div>
                   </div>
                 </div> -->
-                <div class="col-lg-4">
-                  <div class="info">
-                    <div class="email">
-                      <i class="bx bxl-linkedin"></i>
-                      <h4>Connect:</h4>
-                      <p> <a href="https://www.linkedin.com/in/gtannu/">gtanu848</a> </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="info">
-                    <div class="email">
-                      <i class="bi bi-envelope"></i>
-                      <h4>Email:</h4>
-                      <p> <a href="mailto:gtanu848@gmail.com">gtanu848@gmail.com</a> </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4">
-                  <div class="info">
-                    <div class="phone">
-                      <i class="bi bi-phone"></i>
-                      <h4>Call:</h4>
-                      <p>+91 7906232417</p>
-                    </div>
-                  </div>
-                </div>
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="email">
+                <i class="bx bxl-linkedin"></i>
+                <h4>Connect:</h4>
+                <p> <a href="https://www.linkedin.com/in/gtannu/">gtanu848</a> </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="email">
+                <i class="bi bi-envelope"></i>
+                <h4>Email:</h4>
+                <p> <a href="mailto:gtanu848@gmail.com">gtanu848@gmail.com</a> </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="info">
+              <div class="phone">
+                <i class="bi bi-phone"></i>
+                <h4>Call:</h4>
+                <p>+91 7906232417</p>
+              </div>
+            </div>
+          </div>
 
 
-                <!-- </div>
+          <!-- </div>
           </div> -->
 
-                <!-- <div class="col-lg-8 mt-5 mt-lg-0">
+          <!-- <div class="col-lg-8 mt-5 mt-lg-0">
 
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
@@ -849,9 +847,9 @@
 
           </div> -->
 
-              </div>
-            </div>
-          </section><!-- End Contact Section -->
+        </div>
+      </div>
+    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
